added: swagger routes
